force-app/main/default/objects/Regression_Finding__c/Regression_Finding__c.object-meta.xml
<CustomObject>
    <description>Captures a regression finding when a previously-passing test case fails during a regression test run. Links to the test case, run, and result for traceability.</description>
    <label>Regression Finding</label>
    <nameField>
        <displayFormat>FND-{0000}</displayFormat>
        <label>Finding Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Regression Findings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>