force-app/main/default/objects/Regression_Finding__c/fields/Actual_Result__c.field-meta.xml
<CustomField>
    <fullName>Actual_Result__c</fullName>
    <description>What the test actually produced</description>
    <label>Actual Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>