force-app/main/default/objects/Regression_Finding__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Category of the test case (e.g. Functional, Security, Performance)</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>