force-app/main/default/objects/Regression_Finding__c/fields/Expected_Result__c.field-meta.xml
<CustomField>
    <fullName>Expected_Result__c</fullName>
    <description>What the test case expected</description>
    <label>Expected Result</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>