force-app/main/default/objects/Regression_Finding__c/fields/Finding_Date__c.field-meta.xml
<CustomField>
    <fullName>Finding_Date__c</fullName>
    <description>When the regression was detected</description>
    <label>Finding Date</label>
    <type>DateTime</type>
</CustomField>