force-app/main/default/objects/Regression_Finding__c/fields/Layer__c.field-meta.xml
<CustomField>
    <fullName>Layer__c</fullName>
    <description>Which testing layer detected the regression</description>
    <label>Layer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Deployment</fullName>
            </value>
            <value>
                <fullName>Apex Test</fullName>
            </value>
            <value>
                <fullName>Data Scenario</fullName>
            </value>
            <value>
                <fullName>Static Analysis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>