force-app/main/default/objects/Regression_Finding__c/fields/Suite_Name__c.field-meta.xml
<CustomField>
    <fullName>Suite_Name__c</fullName>
    <description>Denormalized suite name for reporting</description>
    <label>Suite Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>