force-app/main/default/objects/Regression_Finding__c/fields/Test_Case__c.field-meta.xml
<CustomField>
    <fullName>Test_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The test case that regressed</description>
    <label>Test Case</label>
    <referenceTo>Regression_Test_Case__c</referenceTo>
    <relationshipLabel>Regression Findings</relationshipLabel>
    <relationshipName>Regression_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>