force-app/main/default/objects/Regression_Finding__c/fields/Test_Result__c.field-meta.xml
<CustomField>
    <fullName>Test_Result__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The specific test result record that triggered this finding</description>
    <label>Test Result</label>
    <referenceTo>Regression_Test_Result__c</referenceTo>
    <relationshipLabel>Regression Findings</relationshipLabel>
    <relationshipName>Regression_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>