force-app/main/default/objects/Regression_Finding__c/fields/Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Test_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The test run in which the regression was found</description>
    <label>Test Run</label>
    <referenceTo>Regression_Test_Run__c</referenceTo>
    <relationshipLabel>Regression Findings</relationshipLabel>
    <relationshipName>Regression_Findings</relationshipName>
    <type>Lookup</type>
</CustomField>