force-app/main/default/objects/Regression_Finding__c/listViews/All_Findings.listView-meta.xml
<ListView>
    <fullName>All_Findings</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>Test_Run__c</columns>
    <columns>Suite_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Priority__c</columns>
    <columns>Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Finding_Date__c</columns>
    <columns>External_Ticket_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Findings</label>
</ListView>