force-app/main/default/objects/Regression_Finding__c/listViews/High_Priority_Findings.listView-meta.xml
<ListView>
    <fullName>High_Priority_Findings</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>Status__c</columns>
    <columns>Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Finding_Date__c</columns>
    <columns>External_Ticket_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Priority__c</field>
        <operation>equals</operation>
        <value>High</value>
    </filters>
    <label>High Priority Findings</label>
</ListView>