force-app/main/default/objects/Regression_Finding__c/listViews/Open_Findings.listView-meta.xml
<ListView>
    <fullName>Open_Findings</fullName>
    <columns>NAME</columns>
    <columns>Test_Case__c</columns>
    <columns>Priority__c</columns>
    <columns>Layer__c</columns>
    <columns>Category__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Finding_Date__c</columns>
    <columns>External_Ticket_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Open</value>
    </filters>
    <label>Open Findings</label>
</ListView>